# rust-zephyr-rtos

./: Cargo.toml  LICENSE-APACHE  README.md  bridge.c  build.rs  wrapper.h
src/: bindings.rs  lib.rs  macros.rs  print.rs  sync.rs  sys.rs  thread.rs  time.rs
src/sync/: condvar.rs  mutex.rs  semaphore.rs
