[package]
name = "zephyr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
heapless = "0.8"
elain="0.3"

[build-dependencies]
bindgen = { version="0.69", features = ["experimental"]}
json = "0.12"
cc = "1"

[profile.dev]
panic="abort"

[profile.release]
panic="abort"